--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- For all browsers -->
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon/favicon-16x16.png">
+    <!-- For Google and Chrome -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/assets/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/assets/favicon/android-chrome-512x512.png">
+    <!-- For iPhone -->
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/assets/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="/src/assets/site.webmanifest"/>
+    <meta property="og:locale" content="pt_BR">
+    <meta http-equiv=”content-language” content=”pt-br”>
+    <meta property=”og:type” content=”website”>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Website Academia Master Gym: Exemplo/Modelo de site criado utilizando React + TailwindCSS">
+    
+    <meta property="og:title" content="Master Gym: Website">
+    <meta property=”og:description” content="Website Academia Master Gym: Exemplo/Modelo de site criado utilizando React + TailwindCSS">
+    <meta property="og:url" content="https://">
+    <meta property="og:site_name" content="Master Gym">
+
+    <meta name="keywords" content="HTML, CSS, JavaScript, React, TailwindCSS, Gym, Master, Academia">
+    <meta name="author" content="Fransérgio de Amorim Mota">
+    <meta name="creator" content="Fransérgio de Amorim Mota">
+    <!-- For robots: Não indexar a página e não rastrear quaisquer links na página: -->
+    <meta name="robots" content="noindex,nofollow">
+    <title>Master Gym</title>
   </head>
   <body>
     <div id="root"></div>
